--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:15.0.1'
 
     implementation 'com.jakewharton.timber:timber:4.7.0'
+    implementation 'net.danlew:android.joda:2.9.9.4'
+
+    testImplementation 'junit:junit:4.12'
 }
